# rust-fasthash

./: Cargo.toml
.github/workflows/: release.yaml
.travis/: before_install.sh
Docker/: build.Dockerfile
fasthash/: Cargo.toml
fasthash-sys/: Cargo.toml
fasthash/src/: lib.rs
