[package]
authors = ["Flier Lu <flier.lu@gmail.com>"]
description = "A suite of non-cryptographic hash functions for Rust - Forked to release current code-base."
edition = "2018"
keywords = ["hash", "hashing"]
license = "Apache-2.0"
name = "fasthash-fork"
version = "0.4.1"

[features]
default = ["doc", "native", "all"]

doc = []
gen = ["fasthash-sys-fork/gen"]

aes = ["fasthash-sys-fork/aes"]
avx = ["fasthash-sys-fork/avx"]
avx2 = ["fasthash-sys-fork/avx2"]
native = ["fasthash-sys-fork/native"]
sse41 = ["fasthash-sys-fork/sse41"]
sse42 = ["fasthash-sys-fork/sse42"]

all = [
  "fasthash-sys-fork/all",
  "ahash",
  "city",
  "farm",
  "highway",
  "lookup3",
  "meow",
  "metro",
  "mum",
  "murmur",
  "seahash",
  "spooky",
  "t1ha",
  "wy",
  "xx",
]
city = ["fasthash-sys-fork/city"]
farm = ["fasthash-sys-fork/farm"]
highway = ["fasthash-sys-fork/highway"]
lookup3 = ["fasthash-sys-fork/lookup3"]
meow = ["fasthash-sys-fork/meow"]
metro = ["fasthash-sys-fork/metro"]
mum = ["fasthash-sys-fork/mum"]
murmur = ["fasthash-sys-fork/murmur"]
spooky = ["fasthash-sys-fork/spooky"]
t1ha = ["fasthash-sys-fork/t1ha"]
wy = ["fasthash-sys-fork/wy"]
xx = ["fasthash-sys-fork/xx"]

[dependencies]
cfg-if = "1.0"
derive_more = "0.99"
lazy_static = "1.3"
num-traits = "0.2"
rand = "0.7"

ahash = {version = "0.7", optional = true}
digest = {version = "0.9", optional = true}
seahash = {version = "4.1", optional = true}
xoroshiro128 = {version = "0.5", features = ["rand"]}

[dependencies.fasthash-sys-fork]
default-features = false
path = "../fasthash-sys-fork"
version = "0.4.2"

[dev-dependencies]
criterion = "0.3"

[build-dependencies]
raw-cpuid = "10"

[[bench]]
harness = false
name = "hash"
